<resources>
    <string name="app_name">AudioTest</string>

    <string name="name_home">主页</string>
    <string name="name_mixer_test">混音测试</string>
    <string name="name_effect_test">音效测试</string>
    <string name="name_bluetooth_test">蓝牙测试</string>
    <string name="name_volume_test">音量测试</string>

    <!--  fragment_mixer_test -->
    <string name="fmt_player_list_name">player列表：</string>
    <string name="fmt_quick_add_player">快速添加player</string>
    <string name="fmt_add_player">添加player</string>
    <string name="text_stream_title">Stream类型</string>
    <string name="text_usage_title">Usage类型</string>

</resources>
