<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homeFragment"
            android:title="@string/name_home" />
        <item
            android:id="@+id/nav_mixerTestFragment"
            android:title="@string/name_mixer_test" />
        <item
            android:id="@+id/nav_effectTestFragment"
            android:title="@string/name_effect_test" />
        <item
            android:id="@+id/nav_bluetoothTestFragment"
            android:title="@string/name_bluetooth_test" />
        <item
            android:id="@+id/nav_volumeTestFragment"
            android:title="@string/name_volume_test" />
    </group>
</menu>